--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.cdnfonts.com/css/phenomena" rel="stylesheet">
   </head>
   <body>
     <!-- navbar -->
@@ -150,12 +151,12 @@
       <div class="container">
         <img src="img/logoSecondary.png" alt="" style="margin-inline: auto" />
         <div class="text">
-          <h2 style="margin-bottom: 10px">Lokasi</h2>
+          <h2 style="margin-bottom: 10px;font-family:'phenomena',sans-serif ;">Lokasi</h2>
           Lokasi Jl. Raya Cikampak Cicadas RT. 001/RW 001. Kecamatan Ciampea,
           Kabupaten Bogor. Jawa Barat 16620
         </div>
         <div class="text">
-          <h2 style="margin-bottom: 10px">Contact</h2>
+          <h2 style="margin-bottom: 10px ;font-family:'phenomena',sans-serif ;">Contact</h2>
           <div class="d-flex">
             <i
               class="fa fa-phone"
